# fcr

./: .gitignore  LICENSE  README.md  Replication.ipynb  final_data.mat  requirements.txt  setup.cfg
.github/workflows/: publish.yml
fcr/: fcr.py
src/fcr/: __init__.py  fcr.py
