[metadata]
name = fcr
description = Fuzzy Clustering Regression Python package, implements the estimator proposed in Lewis et al. (2021)
long_description_content_type = text/markdown

authors = [
  { name=Yasin Simsek, email=yasin.simsek@duke.edu },
]

url = https://github.com/yasin-simsek/fcr

project_urls =
    Homepage = https://github.com/yasin-simsek/fcr
    Bug Tracker = https://github.com/yasin-simsek/fcr/issues
    Changelog = https://github.com/yasin-simsek/fcr/releases

readme = README.md

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

